fix(sidebar): Fixed sidebar collapse

--- a/app/src/assets/styles/main.scss
+++ b/app/src/assets/styles/main.scss
@@ -1,7 +1,4 @@
 @import "abstracts/variables";
 @import "abstracts/mixins";
 
-// TODO: Remove important
-.ant-input {
-  border-radius: .4rem !important;
-}
+@import "layout/overwrite";
